# example-of-a-slackbot-for-pico-w

./: .gitmodules  README.md
micropython/: config.py  main.py  slack_bot.py  websocket_client.py
pico-sdk/: CMakeLists.txt  ISRG_Root_X1.h  https_client.c  https_client.h  main.c  slack_client.c  slack_client.h  tls_client.c  tls_client.h  wss_client.c  wss_client.h
pico-sdk/config/: core_http_config.h  logging.h  lwipopts.h  mbedtls_config.h
